syntax = "proto3";

package com.github.esiqveland.hugin.index.v1;

message DocumentPositions {
  string doc_id = 1;
  repeated int32 positions = 2;
}
